[package]
  name = "point"
  version = "0.3.1"
  authors = [ "Brandon Thomas <bt@brand.io>", "Brandon Thomas <echelon@gmail.com>" ]
  description = "Core point types for various laser projection libraries to use."
  keywords = [ "laser", "projector", "DAC", "hardware" ]
  license = "BSD-4-Clause"
  readme = "README.md"
  repository = "https://github.com/echelon/point.rs"
  documentation = "https://docs.rs/point"

[lib]
  name = "point"
  path = "src/lib.rs"

[dependencies]

[badges]
  travis-ci = { repository = "echelon/point.rs" }

